--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,34 @@
-.App {
+*{
+  font-family: "Arial Black";
+}
+body{
+  padding: 60px;
+
+}
+input{
+  font-size: 1.2rem;
+  width: 100%;
+  color: darkcyan;
+}
+
+.card-grid{
+  display: flex;
+  flex-flow: row wrap;
+  justify-content: center;
+}
+.card{
+  align-content: center;
+  margin-bottom: 10px;
+  margin-right: 10px;
+  overflow: hidden;
+}
+
+.card p{
+  padding: 5px;
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.card img{
+  max-height: 200px;
+  max-width: 250px;
 }
